# saltyboyC

./: .dockerignore  README.md  botlog.txt  docker-compose.yml  openapi.json  restart_all.bat
applications/: log.txt
applications/bot/: Dockerfile  Simple betlog.txt  pyproject.toml  train_model.py
applications/bot/src/: betting_strategy.py  database.py  notifier.py  run.py  salty_client.py  training.py
applications/extension/src/: manifest.json
applications/extension/src/content_scripts/: main.js
applications/extension/src/content_scripts/bet_modes/: logistic.js  weighted.js
applications/extension/src/popup/: popup.html  popup.js
applications/extension/src/utils/: match.js
applications/extension/src/utils/storage/: debugSettings.js  matchData.js
applications/web/: Dockerfile  pyproject.toml
applications/web/src/: app.py  functionalcode.py  suggested_app.py
applications/web/src/templates/: dashboard.html
